docs:  revise background section, fill gaps with cited sources

--- a/notebooks/01-business-understanding.ipynb
+++ b/notebooks/01-business-understanding.ipynb
@@ -12,12 +12,17 @@
    "metadata": {},
    "source": [
     "### Retail Environment (2010-2013)\n",
+    "The period from 2010 to 2013 was marked by a slow but steady recovery from the 2008 financial crisis. With unemployment peaking at over 9% in 2009, consumers were still cautious about their spending, which shaped retail trends during this time. While consumer confidence was gradually improving, shoppers remained budget-conscious and focused primarily on essential purchases. Retailers like Walmart observed more disciplined shopping behaviors, with consumers sticking to their lists and opting for lower-cost items. Many traded down to private-label groceries, choosing lower grades of meat and other affordable options [1]. This \"recession hierarchy\" of food preferences reflected a frugal mindset, which persisted well into the early 2010s.\n",
     "\n",
-    "The period from 2010 to 2013 was marked by a slow but steady recovery from the 2008 financial crisis (GAP TO FILL: article/research about 2008 financial crisis). Consumer confidence was gradually improving, and spending was on the rise, though still cautious. During these years, the retail industry was predominantly driven by in-store sales, as e-commerce was still in its infancy. Retailers like Walmart focused heavily on optimizing their physical stores, improving customer experience, and maintaining competitive pricing.\n",
+    "During these years, the retail industry was predominantly driven by in-store sales, as e-commerce was still in its infancy. Retailers like Walmart focused heavily on optimizing their physical stores, improving customer experience, and maintaining competitive pricing to attract cautious but gradually recovering consumers.\n",
     "\n",
     "### Walmart's Strategic Focus\n",
     "\n",
-    "Walmart continued to dominate the retail sector with its \"Everyday Low Prices\" (EDLP) strategy, which aimed to attract cost-conscious consumers by keeping prices consistently low (GAP TO FILL: research about Walmart strategy & performance during 2008-2013).\n",
+    "During the economic downturn following the 2008 financial crisis, Walmart’s \"Everyday Low Prices\" (EDLP) strategy played a crucial role in helping the company maintain its dominance in the retail sector. By offering consistently low prices, Walmart attracted budget-conscious consumers, leading to steady growth while many competitors struggled. According to Saxena and Sharma (2011), Walmart's net sales increased by 1.1% to $258 billion in 2009, and its operating income grew by 5.2%, reflecting the success of its value-driven offerings [2].\n",
+    "\n",
+    "Walmart also adapted its operations by empowering local marketing teams, revamping product lines, and improving inventory management to enhance operational efficiency. The company focused on affordability, especially for essential goods, which helped retain customers and gain market share. Additionally, initiatives like the \"sundown rule\" and expanding services such as in-store pickup reinforced Walmart’s customer-centric approach [2].\n",
+    "\n",
+    "These strategic efforts allowed Walmart to thrive in a challenging retail environment, where consumer spending remained cautious, and physical stores were the primary focus of retail operations.\n",
     "\n",
     "### Project Scope & Limitation\n",
     "\n",
@@ -28,13 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Articles & research papers:\n",
+    "[1] Rosenbloom, S. (2009, June 6). The Recession, Wal-Mart Style. New York Times. https://www.nytimes.com/2009/06/07/weekinreview/07rosenbloom.html\n",
     "\n",
-    "- [Saxena, Ravindra & Sharma, Arpana. (2011). Everyday low price - A blessing in disguise for Walmart during recession. Int. J. of Business and Globalisation. 7. 409 - 433. 10.1504/IJBG.2011.042749.](https://www.researchgate.net/publication/264823228_Everyday_low_price_-_A_blessing_in_disguise_for_Walmart_during_recession)\n",
-    "\n",
-    "- Roosenblom, S. (2008, June 6). The Recession, Wal-Mart Style. New York Times. https://www.nytimes.com/2009/06/07/weekinreview/07rosenbloom.html\n",
-    "\n",
-    "- Atuan, G. (2023, April 2024). Walmart: Primed To Surpass Its Own Recession Performance In The Next Downturn. Seeking Alpha. https://seekingalpha.com/article/4595947-walmart-wmt-primed-surpass-own-recession-performance-in-next-downturn"
+    "[2] Saxena, R., & Sharma, A. (2011). Everyday low price – A blessing in disguise for Walmart during recession. International Journal of Business and Globalisation, 7, 409-433. https://www.researchgate.net/publication/264823228_Everyday_low_price_-_A_blessing_in_disguise_for_Walmart_during_recession"
    ]
   },
   {
