--- a/notebooks/01-business-understanding.ipynb
+++ b/notebooks/01-business-understanding.ipynb
@@ -49,14 +49,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.3 Project Objectives \n"
+    "Walmart’s \"Everyday Low Prices\" (EDLP) strategy helped the company maintain dominance during the 2010-2013 post-recession period. However, forecasting sales during this time was challenging due to the cautious and unpredictable spending habits of consumers. Inefficiencies in sales predictions led to issues such as overstocking or understocking, which impacted profitability.\n",
+    "\n",
+    "This project aims to address these sales forecasting challenges by improving prediction accuracy. The focus is on developing a model that captures key trends in consumer behavior during this period, providing better insights into inventory management and reducing potential costs."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.4 Signifance"
+    "## 1.3 Project Objectives "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The primary objective of this project is to build a machine learning model that improves the accuracy of Walmart’s weekly sales forecasts during the 2010-2013 post-recession period. This will be achieved by:\n",
+    "\n",
+    "- **Improving Forecast Accuracy**: Developing and comparing multiple machine learning techniques (e.g., linear regression, decision trees, random forests, etc) to identify the best model for accurate sales predictions.\n",
+    "- **Uncovering Sales Patterns**: Analyzing the data to provide insights into trends such as seasonality, promotional impacts, and regional sales performance.\n",
+    "- **Reducing Operational Costs**: Using the improved forecasts to help Walmart optimize inventory management, thereby reducing overstocking or understocking issues.\n",
+    "- **Delivering Business Insights**: In addition to the predictive model, the project will deliver actionable insights into consumer behavior patterns during the post-recession period, offering Walmart strategies to adapt to future economic shifts.\n",
+    "\n",
+    "The model’s performance will be evaluated using relevant metrics such as MAE, RMSE, etc to ensure its effectiveness in addressing the business problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.4 Significance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The significance of this project lies in its ability to help Walmart optimize its sales forecasting process during the challenging post-recession period of 2010-2013. With consumers still cautious about their spending habits, accurate sales forecasting became crucial to avoid overstocking or understocking. By improving the precision of forecasts, Walmart can better manage inventory, reduce costs, and ensure that its \"Everyday Low Prices\" (EDLP) strategy continues to resonate with budget-conscious shoppers.\n",
+    "\n",
+    "From a data science perspective, this project demonstrates the application of machine learning techniques to generate actionable insights that can improve operational efficiency. The project’s outcomes, such as identifying sales patterns and trends, could also provide Walmart with a clearer understanding of consumer behavior during the recovery period, driving better strategic decisions in inventory management and marketing."
    ]
   },
   {
@@ -65,6 +97,25 @@
    "source": [
     "## 1.5 Key Business Drivers"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Several key business drivers impact Walmart’s sales performance and forecasting during the post-recession period:\n",
+    "\n",
+    "- **Seasonality**: Holidays and special events like Black Friday and Christmas have a significant influence on sales volumes. Understanding these patterns is critical for accurate forecasting.\n",
+    "- **Promotions and Discounts**: Walmart's frequent use of promotions, especially tied to the EDLP strategy, affects consumer purchasing behavior. These events can cause spikes in sales, making it essential to account for them when building a predictive model.\n",
+    "- **Economic Conditions**: The ongoing recovery from the 2008 financial crisis, including factors such as unemployment rates and consumer confidence, continued to impact shoppers' willingness to spend during this period.\n",
+    "- **Product Availability and Assortment**: Changes in product lines or inventory levels could affect sales, especially if Walmart made adjustments in response to local demand or operational challenges.\n",
+    "\n",
+    "Incorporating these drivers into the project ensures that the forecasting model aligns with the real-world factors that shape Walmart's sales outcomes during the recession recovery."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
