--- a/notebooks/02_data_understanding.ipynb
+++ b/notebooks/02_data_understanding.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Identify Data Sources\n",
+    "## 2.1.1 Identify Data Sources\n",
     "\n",
     "The datasets were obtained from several Kaggle repositories, all focusing on Walmart’s sales. Below are the details of the data sources:\n",
     "\n",
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assess Data Structure\n",
+    "## 2.1.2 Assess Data Structure\n",
     "\n",
     "Each dataset has a similar core structure but with different scopes:\n",
     "\n",
@@ -85,6 +85,540 @@
     "- **Sales Indicators**:  \n",
     "  - In **Dataset 1**, sales may be indirectly captured by the `MarkDown1-5` columns, potentially indicating promotions or discounts. The exact role of these columns will be analyzed during EDA.\n",
     "  - In **Dataset 2**, weekly sales are explicitly captured in the `Weekly_Sales` column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2.2 Data Overview"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import dtale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_csv(\"https://raw.githubusercontent.com/laiflonglearner/walmart-sales-prediction/refs/heads/main/data/external/kaggle_yasserh_walmart_dataset/Walmart.csv\")\n",
+    "\n",
+    "df2_features = pd.read_csv(\"https://raw.githubusercontent.com/laiflonglearner/walmart-sales-prediction/main/data/external/kaggle_iamprateek_walmart_sales_forecast/features.csv\")\n",
+    "df2_stores =  pd.read_csv(\"https://raw.githubusercontent.com/laiflonglearner/walmart-sales-prediction/main/data/external/kaggle_iamprateek_walmart_sales_forecast/stores.csv\")\n",
+    "df2_train = pd.read_csv(\"https://raw.githubusercontent.com/laiflonglearner/walmart-sales-prediction/main/data/external/kaggle_iamprateek_walmart_sales_forecast/train.csv\")\n",
+    "df2_test =pd.read_csv(\"https://raw.githubusercontent.com/laiflonglearner/walmart-sales-prediction/main/data/external/kaggle_iamprateek_walmart_sales_forecast/test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2.1 First Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6435 entries, 0 to 6434\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Store         6435 non-null   int64  \n",
+      " 1   Date          6435 non-null   object \n",
+      " 2   Weekly_Sales  6435 non-null   float64\n",
+      " 3   Holiday_Flag  6435 non-null   int64  \n",
+      " 4   Temperature   6435 non-null   float64\n",
+      " 5   Fuel_Price    6435 non-null   float64\n",
+      " 6   CPI           6435 non-null   float64\n",
+      " 7   Unemployment  6435 non-null   float64\n",
+      "dtypes: float64(5), int64(2), object(1)\n",
+      "memory usage: 402.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Weekly_Sales</th>\n",
+       "      <th>Holiday_Flag</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Fuel_Price</th>\n",
+       "      <th>CPI</th>\n",
+       "      <th>Unemployment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>6435.000000</td>\n",
+       "      <td>6.435000e+03</td>\n",
+       "      <td>6435.000000</td>\n",
+       "      <td>6435.000000</td>\n",
+       "      <td>6435.000000</td>\n",
+       "      <td>6435.000000</td>\n",
+       "      <td>6435.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>1.046965e+06</td>\n",
+       "      <td>0.069930</td>\n",
+       "      <td>60.663782</td>\n",
+       "      <td>3.358607</td>\n",
+       "      <td>171.578394</td>\n",
+       "      <td>7.999151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>12.988182</td>\n",
+       "      <td>5.643666e+05</td>\n",
+       "      <td>0.255049</td>\n",
+       "      <td>18.444933</td>\n",
+       "      <td>0.459020</td>\n",
+       "      <td>39.356712</td>\n",
+       "      <td>1.875885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.099862e+05</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-2.060000</td>\n",
+       "      <td>2.472000</td>\n",
+       "      <td>126.064000</td>\n",
+       "      <td>3.879000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>5.533501e+05</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>47.460000</td>\n",
+       "      <td>2.933000</td>\n",
+       "      <td>131.735000</td>\n",
+       "      <td>6.891000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>9.607460e+05</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>62.670000</td>\n",
+       "      <td>3.445000</td>\n",
+       "      <td>182.616521</td>\n",
+       "      <td>7.874000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>34.000000</td>\n",
+       "      <td>1.420159e+06</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>74.940000</td>\n",
+       "      <td>3.735000</td>\n",
+       "      <td>212.743293</td>\n",
+       "      <td>8.622000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>3.818686e+06</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>100.140000</td>\n",
+       "      <td>4.468000</td>\n",
+       "      <td>227.232807</td>\n",
+       "      <td>14.313000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Store  Weekly_Sales  Holiday_Flag  Temperature   Fuel_Price  \\\n",
+       "count  6435.000000  6.435000e+03   6435.000000  6435.000000  6435.000000   \n",
+       "mean     23.000000  1.046965e+06      0.069930    60.663782     3.358607   \n",
+       "std      12.988182  5.643666e+05      0.255049    18.444933     0.459020   \n",
+       "min       1.000000  2.099862e+05      0.000000    -2.060000     2.472000   \n",
+       "25%      12.000000  5.533501e+05      0.000000    47.460000     2.933000   \n",
+       "50%      23.000000  9.607460e+05      0.000000    62.670000     3.445000   \n",
+       "75%      34.000000  1.420159e+06      0.000000    74.940000     3.735000   \n",
+       "max      45.000000  3.818686e+06      1.000000   100.140000     4.468000   \n",
+       "\n",
+       "               CPI  Unemployment  \n",
+       "count  6435.000000   6435.000000  \n",
+       "mean    171.578394      7.999151  \n",
+       "std      39.356712      1.875885  \n",
+       "min     126.064000      3.879000  \n",
+       "25%     131.735000      6.891000  \n",
+       "50%     182.616521      7.874000  \n",
+       "75%     212.743293      8.622000  \n",
+       "max     227.232807     14.313000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"475\"\n",
+       "            src=\"http://DESKTOP-EJMUHG1:40000/dtale/iframe/1\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1711acad490>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtale.show(df1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2.2 Second Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8190 entries, 0 to 8189\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Store         8190 non-null   int64  \n",
+      " 1   Date          8190 non-null   object \n",
+      " 2   Temperature   8190 non-null   float64\n",
+      " 3   Fuel_Price    8190 non-null   float64\n",
+      " 4   MarkDown1     4032 non-null   float64\n",
+      " 5   MarkDown2     2921 non-null   float64\n",
+      " 6   MarkDown3     3613 non-null   float64\n",
+      " 7   MarkDown4     3464 non-null   float64\n",
+      " 8   MarkDown5     4050 non-null   float64\n",
+      " 9   CPI           7605 non-null   float64\n",
+      " 10  Unemployment  7605 non-null   float64\n",
+      " 11  IsHoliday     8190 non-null   bool   \n",
+      "dtypes: bool(1), float64(9), int64(1), object(1)\n",
+      "memory usage: 712.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2_features.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 45 entries, 0 to 44\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   Store   45 non-null     int64 \n",
+      " 1   Type    45 non-null     object\n",
+      " 2   Size    45 non-null     int64 \n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 1.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2_stores.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Train Dataset ---\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 421570 entries, 0 to 421569\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column        Non-Null Count   Dtype  \n",
+      "---  ------        --------------   -----  \n",
+      " 0   Store         421570 non-null  int64  \n",
+      " 1   Dept          421570 non-null  int64  \n",
+      " 2   Date          421570 non-null  object \n",
+      " 3   Weekly_Sales  421570 non-null  float64\n",
+      " 4   IsHoliday     421570 non-null  bool   \n",
+      "dtypes: bool(1), float64(1), int64(2), object(1)\n",
+      "memory usage: 13.3+ MB\n",
+      "\n",
+      "\n",
+      "--- Test Dataset ---\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 115064 entries, 0 to 115063\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column     Non-Null Count   Dtype \n",
+      "---  ------     --------------   ----- \n",
+      " 0   Store      115064 non-null  int64 \n",
+      " 1   Dept       115064 non-null  int64 \n",
+      " 2   Date       115064 non-null  object\n",
+      " 3   IsHoliday  115064 non-null  bool  \n",
+      "dtypes: bool(1), int64(2), object(1)\n",
+      "memory usage: 2.7+ MB\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2_train_test = {\"Train Dataset\": df2_train, \"Test Dataset\": df2_test}\n",
+    "\n",
+    "for name, df in df2_train_test.items():\n",
+    "    print(f\"--- {name} ---\")\n",
+    "    df.info()\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"475\"\n",
+       "            src=\"http://DESKTOP-EJMUHG1:40000/dtale/iframe/2\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1711ad2ad30>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtale.show(df2_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"475\"\n",
+       "            src=\"http://DESKTOP-EJMUHG1:40000/dtale/iframe/3\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1711ad2e640>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtale.show(df2_stores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"475\"\n",
+       "            src=\"http://DESKTOP-EJMUHG1:40000/dtale/iframe/4\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1711acea5e0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtale.show(df2_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"475\"\n",
+       "            src=\"http://DESKTOP-EJMUHG1:40000/dtale/iframe/5\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1711ad2ec10>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtale.show(df2_test)"
    ]
   }
  ],
