docs:  add comments and description

--- a/notebooks/02_data_understanding.ipynb
+++ b/notebooks/02_data_understanding.ipynb
@@ -128,13 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "First Dataset Info:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 6435 entries, 0 to 6434\n",
       "Data columns (total 8 columns):\n",
@@ -154,14 +155,22 @@
     }
    ],
    "source": [
+    "print(\"First Dataset Info:\")\n",
     "df1.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Dataset Descriptive Statistics:\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -299,12 +308,13 @@
        "max     227.232807     14.313000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(\"First Dataset Descriptive Statistics:\")\n",
     "df1.describe()"
    ]
   },
@@ -344,7 +354,18 @@
     }
    ],
    "source": [
+    "# Explore dataset interactively in D-Tale for deeper insights\n",
     "dtale.show(df1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To generate a data summary using D-Tale, hover over the header of the dataframe to reveal the menu bar. From there, select the Visualize option and choose Describe. This will provide statistical summaries and insights for the dataset within D-Tale’s interface.\n",
+    "\n",
+    "![image](images\\dtale-menu-bar.png)\n",
+    "![image](images\\dtale-describe.png)"
    ]
   },
   {
@@ -356,13 +377,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Features Dataset Info:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 8190 entries, 0 to 8189\n",
       "Data columns (total 12 columns):\n",
@@ -386,18 +408,20 @@
     }
    ],
    "source": [
+    "print(\"Features Dataset Info:\")\n",
     "df2_features.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Stores Dataset Info:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 45 entries, 0 to 44\n",
       "Data columns (total 3 columns):\n",
@@ -412,12 +436,13 @@
     }
    ],
    "source": [
+    "print(\"Stores Dataset Info:\")\n",
     "df2_stores.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
