docs:  update image path

--- a/notebooks/02_data_understanding.ipynb
+++ b/notebooks/02_data_understanding.ipynb
@@ -364,8 +364,8 @@
    "source": [
     "To generate a data summary using D-Tale, hover over the header of the dataframe to reveal the menu bar. From there, select the Visualize option and choose Describe. This will provide statistical summaries and insights for the dataset within D-Tale’s interface.\n",
     "\n",
-    "![image](images\\dtale-menu-bar.png)\n",
-    "![image](images\\dtale-describe.png)"
+    "![image](../notebooks/images/dtale-menu-bar.png)\n",
+    "![image](../notebooks/images/dtale-describe.png)"
    ]
   },
   {
